@@ -115,6 +115,9 @@ public class CLIBootstrap {
 
     private final static String[] ENV_VARS = { "_AS_INSTALL", "APPCPATH", "VMARGS" };
 
+    private final static String EXT_DIRS_INTRODUCER = "-Djava.ext.dirs";
+    private final static String ENDORSED_DIRS_INTRODUCER = "-Djava.endorsed.dirs";
+
     private static final LocalStringManager localStrings = new LocalStringManagerImpl(CLIBootstrap.class);
 
     private JavaInfo java;
@@ -125,7 +128,7 @@ public class CLIBootstrap {
      * set up during init with various subtypes of command line elements
      */
     private CommandLineElement
-            accValuedOptions, accUnvaluedOptions,
+            extDirs, endorsedDirs, accValuedOptions, accUnvaluedOptions,
             jvmPropertySettings, jvmValuedOptions, otherJVMOptions, arguments;
 
     /** arguments passed to the ACC Java agent */
@@ -236,7 +239,16 @@ public class CLIBootstrap {
          * Assign the various command line element matchers.  See the
          * descriptions of each subtype for what each is used for.
          */
-
+        extDirs = new OverridableDefaultedPathBasedOption(
+                EXT_DIRS_INTRODUCER,
+                userVMArgs.evExtDirs,
+                java.ext().getAbsolutePath(),
+                gfInfo.extPaths());
+        endorsedDirs = new OverridableDefaultedPathBasedOption(
+                ENDORSED_DIRS_INTRODUCER,
+                userVMArgs.evEndorsedDirs,
+                java.endorsed().getAbsolutePath(),
+                gfInfo.endorsedPaths());
         accValuedOptions = new ACCValuedOption(ACC_VALUED_OPTIONS_PATTERN);
         accUnvaluedOptions = new ACCUnvaluedOption(ACC_UNVALUED_OPTIONS_PATTERN);
         jvmPropertySettings = new JVMOption("-D.*", userVMArgs.evJVMPropertySettings);
@@ -257,27 +269,44 @@ public class CLIBootstrap {
          * patterns are from most specific to most general.
          */
         elementsInScanOrder = new CommandLineElement[] {
-            accValuedOptions,
-            accUnvaluedOptions,
-            jvmValuedOptions,
-            jvmPropertySettings,
-            jvmMainSetting,
-            otherJVMOptions,
-            arguments };
+                extDirs,
+                endorsedDirs,
+                accValuedOptions,
+                accUnvaluedOptions,
+                jvmValuedOptions,
+                jvmPropertySettings,
+                jvmMainSetting,
+                otherJVMOptions,
+                arguments};
 
         /*
          * Add the elements in this order so they appear in the generated java command in the correct positions.
          */
-        //In JDK 9 and later ext and endorsed directory removed .
-        elementsInOutputOrder = new CommandLineElement[] {
-            jvmValuedOptions,
-            jvmPropertySettings,
-            otherJVMOptions,
-            accUnvaluedOptions,
-            accValuedOptions,
-            jvmMainSetting,
-            arguments
-        };
+        //In JDK 9 and later ext and endorsed directory removed.
+        int major = JDK.getMajor();
+        if (major >= 9) {
+            elementsInOutputOrder = new CommandLineElement[]{
+                    jvmValuedOptions,
+                    jvmPropertySettings,
+                    otherJVMOptions,
+                    accUnvaluedOptions,
+                    accValuedOptions,
+                    jvmMainSetting,
+                    arguments
+            };
+        } else {
+            elementsInOutputOrder = new CommandLineElement[]{
+                    jvmValuedOptions,
+                    jvmPropertySettings,
+                    otherJVMOptions,
+                    extDirs,
+                    endorsedDirs,
+                    accUnvaluedOptions,
+                    accValuedOptions,
+                    jvmMainSetting,
+                    arguments
+            };
+        }
         
     }
 
@@ -782,7 +811,8 @@ public class CLIBootstrap {
      * the user specifies one of these options on the command line then we discard the Java installation values and append
      * the GlassFish values to the user's values.
      * <p>
-     * If the user does not specify the property then the user would
+     * This is used for handling java.ext.dirs and java.endorsed.dirs property
+     * settings. If the user does not specify the property then the user would
      * expect the Java-provided directories to be used. We need to
      * specify the GlassFish ones, so that means we need combine the GlassFish
      * ones and the default JVM ones explicitly.
@@ -1047,6 +1077,12 @@ public class CLIBootstrap {
             return configXMLFile;
         }
 
+        String[] endorsedPaths() {
+            return new String[] {
+                    new File(lib, "endorsed").getAbsolutePath(),
+                    new File(modules, "endorsed").getAbsolutePath()};
+        }
+
         String extPaths() {
             return new File(lib, "ext").getAbsolutePath();
         }
@@ -1108,6 +1144,10 @@ public class CLIBootstrap {
             return new File(lib(), "ext");
         }
 
+        File endorsed() {
+            return new File(lib(), "endorsed");
+        }
+
         File lib() {
             return new File(jreHome, "lib");
         }
@@ -1128,6 +1168,8 @@ public class CLIBootstrap {
      */
     class UserVMArgs {
 
+        private CommandLineElement evExtDirs;
+        private CommandLineElement evEndorsedDirs;
         private CommandLineElement evJVMPropertySettings;
         private CommandLineElement evJVMValuedOptions;
         private CommandLineElement evOtherJVMOptions;
@@ -1139,6 +1181,18 @@ public class CLIBootstrap {
             if (isDebug) {
                 System.err.println("VMARGS = " + (vmargs == null ? "null" : vmargs));
             }
+
+            evExtDirs = new OverridableDefaultedPathBasedOption(
+                    EXT_DIRS_INTRODUCER,
+                    null,
+                    java.ext().getAbsolutePath(),
+                    gfInfo.extPaths());
+
+            evEndorsedDirs = new OverridableDefaultedPathBasedOption(
+                    ENDORSED_DIRS_INTRODUCER,
+                    null,
+                    java.endorsed().getAbsolutePath(),
+                    gfInfo.endorsedPaths());
           
             evJVMPropertySettings = new JVMOption("-D.*", null);
             evJVMValuedOptions = new JVMValuedOption(JVM_VALUED_OPTIONS_PATTERN, null);
@@ -1154,6 +1208,8 @@ public class CLIBootstrap {
         }
 
         private void initEVCommandLineElements() {
+            evElements.add(evExtDirs);
+            evElements.add(evEndorsedDirs);
             evElements.add(evJVMPropertySettings);
             evElements.add(evJVMValuedOptions);
             evElements.add(evOtherJVMOptions);
